--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <input type="number" id="pagoTaxaAdministrativa" placeholder="Ex: 13.4779" required>
                 </div>
                 <div class="input-group">
-                    <label>Pago Taxa de Adesão (%)</label>
+                    <label>Pago em Taxa de Adesão (%)</label>
                     <input type="number" id="pagoTaxaAdesao" placeholder="Ex: 0.5983">
                 </div>
             </div>
