Adicionado uma favicon na linha 8

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora - Saldo Devedor</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="icon" href="https://www.embracon.com.br/apple-icon.png?58c48c1f3c9af0dd" type="image/png">
 </head>
 <body>
     <div class="calculator">
