Modiicado Taxa de adesão para Taxa Adm Antecipada, pois no consocio não há taxa de adesão

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <input type="number" id="fundoReserva" placeholder="Ex: 3" required>
                 </div>
                 <div class="input-group">
-                    <label>Taxa de Adesão (%)</label>
-                    <input type="number" id="taxaAdesao" placeholder="Ex: 1">
+                    <label>Taxa de Adm Antecipada (%)</label>
+                    <input type="number" id="pagoTaxaAdmAt" placeholder="Ex: 1">
                 </div>
             </div>
 
@@ -63,8 +63,8 @@
                     <input type="number" id="pagoTaxaAdministrativa" placeholder="Ex: 13.4779" required>
                 </div>
                 <div class="input-group">
-                    <label>Pago em Taxa de Adesão (%)</label>
-                    <input type="number" id="pagoTaxaAdesao" placeholder="Ex: 0.5983">
+                    <label>Pago em Taxa de Adm Antecipada (%)</label>
+                    <input type="number" id="pagoTaxaAdmAt" placeholder="Ex: 0.5983">
                 </div>
             </div>
 
